--- a/index.html
+++ b/index.html
@@ -181,15 +181,15 @@
 </head>
 <body>
   <nav>
-    <a href="#" onclick="switchPage('home')"
+    <a href="javascript:void(0)" onclick="switchPage('home')"
        style="font-size: 20px; background: rgba(0,122,255,0.2); border-radius: 25px;">
       首页
     </a>
-    <a href="#" onclick="switchPage('about')"
+    <a href="javascript:void(0)" onclick="switchPage('about')"
        style="font-size: 18px; margin-left: 30px;">
       关于
     </a>
-    <a href="#" onclick="switchPage('plugins')"
+    <a href="javascript:void(0)" onclick="switchPage('plugins')"
        style="font-size: 18px; margin-left: 30px;">
       插件
     </a>
