--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>整改中 XSMP 官网</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XSMP 官网</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <style>
     :root {
@@ -18,218 +18,199 @@
       --card-btn-size: 14px 30px;
       --card-btn-radius: 999px;
     }
-
-    * {
-      user-select: none;
-      box-sizing: border-box;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
+    * { box-sizing: border-box; user-select: none; margin: 0; padding: 0;}
+    body {
       background: var(--bg-dark);
       color: white;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-      scroll-behavior: smooth;
-      height: auto;
-      overflow-y: auto;
+      overflow-x: hidden;
     }
-
-    body {
-      padding-bottom: 100px;
-      min-height: 100vh;
-    }
-
     nav {
       background: var(--black-full);
       padding: 20px 0;
       text-align: center;
       position: fixed;
-      top: 0;
       width: 100%;
+      top: 0;
       z-index: 999;
     }
-
     nav a {
       color: white;
       text-decoration: none;
-      margin: 0 20px;
+      margin: 0 15px;
       font-size: 18px;
       padding: 10px 20px;
       border-radius: 20px;
-      transition: transform 0.2s ease, background-color 0.3s;
+      transition: 0.2s ease;
       display: inline-block;
     }
-
     nav a:hover {
       background-color: var(--accent);
     }
-
     nav a:active {
       transform: scale(0.95);
     }
-
-    .content {
-      position: relative;
-      padding-top: 100px;
-      text-align: center;
-      min-height: calc(100vh - 140px);
-    }
-
     section {
       min-height: calc(100vh - 140px);
-      padding-top: 100px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
+      padding: 120px 20px 60px;
+      text-align: center;
       opacity: 0;
       transform: scale(0.98);
-      transition: opacity 0.5s ease, transform 0.5s ease;
+      transition: opacity 0.5s, transform 0.5s;
+      position: absolute;
+      width: 100%;
+      top: 0;
+      left: 0;
       pointer-events: none;
-      height: auto;
     }
-
     section.active {
       opacity: 1;
       transform: scale(1);
       pointer-events: auto;
       z-index: 1;
+      position: relative;
     }
-
-    h1, h2, p {
-      margin: 20px 0;
+    h1 {
+      font-size: 48px;
+      text-shadow: 0 0 20px rgba(0,122,255,0.8);
+      margin-bottom: 20px;
     }
-
+    p {
+      margin-top: 20px;
+      font-size: 20px;
+      color: #aaaaaa;
+    }
+    .cards {
+      margin-top: 50px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 50px;
+    }
     .card {
-      width: 320px;
-      height: 320px;
+      width: 300px;
+      height: 300px;
       background: linear-gradient(45deg, #1a1a1a, #2d2d2d);
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: box-shadow 0.3s ease, transform 0.15s ease;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
+      transition: 0.3s;
+      cursor: pointer;
     }
-
     .card:hover {
-      transform: translateX(-50%) scale(1.05);
-      box-shadow: 0 0 10px rgba(0, 122, 255, 0.4),
-                  0 0 20px rgba(0, 122, 255, 0.3),
-                  0 0 40px rgba(0, 122, 255, 0.2);
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(0,122,255,0.4);
     }
-
     .card:active {
-      transform: translateX(-50%) scale(0.95);
+      transform: scale(0.95);
     }
-
     .card-text {
       font-size: 24px;
-      text-align: center;
-      padding: 30px;
+      padding: 20px;
     }
-
     a.cta-button {
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
+      display: inline-block;
+      margin-top: 40px;
       padding: var(--card-btn-size);
       background: var(--card-bg);
       border-radius: var(--card-btn-radius);
       color: var(--card-text-color);
       font-size: 18px;
-      font-weight: 600;
-      cursor: pointer;
+      font-weight: bold;
       text-decoration: none;
-      text-align: center;
-      display: inline-block;
-      transition: all 0.3s ease;
-      --glow-color: var(--card-glow-color);
-      --glow-intensity: var(--card-glow-intensity);
+      transition: 0.3s;
     }
-
     a.cta-button:hover {
-      transform: translateX(-50%) scale(1.05);
-      box-shadow: 0 0 15px var(--glow-color);
+      transform: scale(1.05);
+      box-shadow: 0 0 15px var(--card-glow-color);
     }
-
     a.cta-button:active {
-      transform: translateX(-50%) scale(0.95);
-      box-shadow: 0 5px 15px rgba(0, 122, 255, 0.2),
-                  0 0 8px var(--glow-color);
+      transform: scale(0.95);
     }
-
     footer {
       background: var(--black-full);
-      text-align: center;
       padding: 20px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      z-index: 998;
-    }
-
-    footer p {
-      margin: 0;
+      text-align: center;
       font-size: 14px;
       color: #00ff88;
       text-shadow: 0 0 5px rgba(255,255,255,0.8);
+      margin-top: 100px;
     }
-
     @media (max-width: 768px) {
-      .card {
-        position: static;
-        margin: 30px auto;
-        transform: none !important;
-      }
-
-      a.cta-button {
-        position: relative;
-        margin: 20px auto;
-        transform: none;
-      }
+      h1 { font-size: 36px; }
+      .card { width: 90%; max-width: 300px; }
+      p { font-size: 18px; }
     }
   </style>
 </head>
+
 <body>
-  <div class="content">
-    <p>XSMP 官网升级多设备支持中 稍后再来吧
-  </div>
-  
-  <script>
-    let currentPage = 'home';
 
-    function switchPage(pageId) {
-      if (pageId === currentPage) return;
+<nav>
+  <a href="javascript:void(0)" onclick="switchPage('home')">首页</a>
+  <a href="javascript:void(0)" onclick="switchPage('about')">关于</a>
+  <a href="javascript:void(0)" onclick="switchPage('plugins')">插件</a>
+</nav>
 
-      const oldSection = document.getElementById(currentPage);
-      const newSection = document.getElementById(pageId);
+<div id="container">
 
-      oldSection.classList.remove('active');
-      newSection.classList.add('active');
+  <section id="home">
+    <h1>XSMP</h1>
+    <p>公益的中国大陆 Lifesteal 服务器。</p>
+    <p>官网测试中，可能有部分内容缺失，将在之后补充。Using XSite V1.7</p>
+    <div class="cards">
+      <div class="card" style="box-shadow: 0 0 20px rgb(255, 68, 68);">
+        <div class="card-text" style="color:white; text-shadow: 0 0 10px rgb(255,68,68);">死亡不掉落</div>
+      </div>
+      <div class="card" style="box-shadow: 0 0 20px rgb(0,255,110);">
+        <div class="card-text" style="color:white; text-shadow: 0 0 10px rgb(0,255,110);">稳定不跑路</div>
+      </div>
+      <div class="card" style="box-shadow: 0 0 20px rgba(0,122,255,1.0);">
+        <div class="card-text" style="color:white; text-shadow: 0 0 10px rgba(0,122,255,1.0);">管理不神权</div>
+      </div>
+    </div>
+  </section>
 
-      const content = document.querySelector('.content');
-      const activeSection = newSection;
-      const sectionHeight = activeSection.scrollHeight;
-      content.style.minHeight = `${sectionHeight + 100}px`;
+  <section id="about">
+    <h1 style="color:#00ff88; text-shadow:0 0 20px rgba(0,255,136,0.8);">关于</h1>
+    <p>2024年7月，服主 Wind_Blood 为他所处的某无政府服务器的组织 弃世会 建立了一个未命名的服务器，并邀请组织成员来玩。</p>
+    <p>一天，服主发现了 Lifesteal SMP 这个系列，并对这种玩法十分感兴趣。他将 弃世会 私服改为了 Lifesteal 玩法，并在某 Minecraft 交流群上公开了它。</p>
+    <p>服务器因为某位乐子小学生 tomato ，群里来了很多人看猴，其中也有很多真正想玩这个服务器的人。</p>
+    <p>原本该服命名为 LifestealX SMP，为了让服名好记一点，改名为了今天的 XSMP。</p>
+    <p>就这样，XSMP 的玩家逐渐变多，服主迅速挑选了一些玩家，建立起了一个尽职的管理组。</p>
+    <p>XSMP 和当时服主在宣传群里发的宣传内容一样，没有跑路，也没有跑路的打算，就算在日活为0的今天 (2025/4/12) 也还是挺立着。</p>
+    <p>不管现在服务器日活多不多，如果你在找一个 死亡不掉落、管理尽职尽责不神权、稳定不跑路 的生存服务器的话，</p>
+    <p style="font-size:22px; color:white; text-shadow:0 0 15px rgba(0,255,136,1.0);">考虑一下 XSMP ?</p>
+    <a href="https://qm.qq.com/q/PqSVUT6wAa" class="cta-button" style="--card-bg:#5eacff;--card-glow-color:#00c6ff;--card-text-color:black;">加入 QQ群</a>
+  </section>
 
-      currentPage = pageId;
-    }
+  <section id="plugins">
+    <h1 style="color:white; text-shadow:0 0 20px rgba(255,68,0,0.8);">自研插件</h1>
+    <p>目前就 XGamemode 一个。</p>
+    <a href="https://www.minebbs.com/resources/xgamemode.11041/" class="cta-button" style="--card-bg:#5eacff;--card-glow-color:#ff8648;--card-text-color:black;">前往 MineBBS 查看</a>
+  </section>
 
-    window.addEventListener("DOMContentLoaded", () => {
-      const home = document.getElementById("home");
-      requestAnimationFrame(() => {
-        home.classList.add("active");
-        const content = document.querySelector('.content');
-        const sectionHeight = home.scrollHeight;
-        content.style.minHeight = `${sectionHeight + 100}px`;
-      });
-    });
-  </script>
+</div>
+
+<footer>
+  <p>© 2025 半生风血 - Powered by XSite - XSMP 官网</p>
+</footer>
+
+<script>
+let currentPage = 'home';
+function switchPage(pageId) {
+  if (pageId === currentPage) return;
+  document.getElementById(currentPage).classList.remove('active');
+  document.getElementById(pageId).classList.add('active');
+  window.scrollTo(0, 0);
+  currentPage = pageId;
+}
+window.addEventListener('DOMContentLoaded', () => {
+  document.getElementById(currentPage).classList.add('active');
+});
+</script>
+
 </body>
 </html>
